webapp/src/components/Page/Page.css
.Page {
  height: calc(100% - var(--navbar-height));
}

.Page > div {
  position: relative;
  min-height: calc(100% - var(--footer-height));
  padding-top: 30px;
  padding-bottom: 30px;
  background: var(--gradient);
}

@media (max-width: 768px) {
  .Page > div {
    padding-left: 1em;
    padding-right: 1em;
  }
}

